# JobBoardApp

./: .gitignore  README.md  pyproject.toml
job/: models.py  urls.py  views.py
job/migrations/: 0001_initial.py  0002_job_job_type.py  0003_job_description.py  0004_job_experience_job_published_at_job_salary_and_more.py  0005_category.py  0006_job_category.py  0007_job_image.py
job/templates/job/: job_detail.html  job_list.html
project/: settings.py  urls.py
templates/: base.html
