[tool.poetry]
name = "jobapp"
version = "0.1.0"
description = ""
authors = ["Omar Desouky <omaressamdesouky2274@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
black = "^22.10.0"
django-environ = "^0.9.0"
Pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
